# winnow-grammar

./: .aider.conf.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  UPSTREAM.md  adr-upstream-compatibility.md  feature-requests.md  gemini3-instructions.md  lib.rs  syn-grammar-bug1.md  syn-grammar1-bug-patch.rs  syn-grammar1-bug.test.rs  upstream.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
.idx/: dev.nix
scripts/: pre-commit.sh
src/: lib.rs  main.rs
tests/: args.rs  bin_test.rs  char_test.rs  comprehensive.rs  cron.rs  features.rs  float_test.rs  generics_test.rs  hex_test.rs  language.rs  left_recursion.rs  line_ending_test.rs  oct_test.rs  primitive_types.rs  recover_test.rs  safety_critical.rs  space_test.rs  ui_tests.rs  visibility.rs  ws_test.rs
tests/ui/: ambiguity.rs  ambiguity.stderr  literal_bindings.rs  recursion.rs  recursion.stderr
winnow-grammar-macro/: Cargo.toml  README.md
winnow-grammar-macro/src/: lib.rs
winnow-grammar-macro/src/codegen/: mod.rs
