[workspace]
members = ["winnow-grammar-macro"]
resolver = "2"

[package]
name = "winnow-grammar"
version = "0.1.0"
edition = "2021"

[dependencies]
winnow = "0.6"
winnow-grammar-macro = { path = "winnow-grammar-macro" }
syn-grammar = "0.7"
syn-grammar-model = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0.116"
