[package]
name = "winnow-grammar-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
syn-grammar-model = { git = "https://github.com/keywan-ghadami/syn-grammar", branch = "main" }
grammar-kit = { git = "https://github.com/keywan-ghadami/syn-grammar", branch = "main" }
